--- a/posts/post2.mdx
+++ b/posts/post2.mdx
@@ -1,7 +1,7 @@
 ---
-title: Mental models for designers PART 2
+title: Update II-Meet the Team
 description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
-date: Sep 14 2021
+date: Mar 02 2022
 ---
 
 This is an example post. There's another one [here](/posts/example-post).
