--- a/posts/post3.mdx
+++ b/posts/post3.mdx
@@ -1,24 +1,24 @@
 ---
-title: How to create SVG-ready icon symbols in Sketch PART 2
+title: UPDATE III - Tokenomics & Game Mechanics
 description: "Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum."
-date: May 8 2021
+date: Mar 02 2022
 ---
 
-Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum fluctuations requires an enormous amount of energy, and there would be a remnant of that energy in that space afterwards if the fluctuations were flushed out, plus an unstable environment (1veritasium). Even on computers, deleted data is not actually tossed away, by rather written over.
+please wait for update .
 
-# h1 Heading
+# play to earn
 
-## h2 Heading
+## blockchain
 
-### h3 Heading
+### near
 
-#### h4 Heading
+#### aurora
 
-##### h5 Heading
+##### nft
 
-###### h6 Heading
+###### city builder
 
-## Horizontal Rules
+##  decentralized
 
 ---
 
